Added 24 hour tmd function
